Adding HTML and initial styling changes
Made a user div that contains post and page containers. Also, added
a placeholder wallpaper.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,9 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+@import url(https://fonts.googleapis.com/css?family=Rock+Salt);
+
+body {
+  // font-family: 'Rock Salt', cursive;
+  background-image: url('https://smhttp-ssl-5891.nexcesscdn.net/media/catalog/product/cache/1/image/1800x/6b9ffbf72458f4fd2d3cb995d92e8889/b/o/bobloblawheather_fullpic.png');
+  font-size: 20px;
+}
