Added show/hide logic for user and visitor views
Visitor views are different from an authenticated user view.
For visitor, the create blog/page divs/buttons, nav bar are hidden and
the show recent blog/page and the jumbotron are displayed
For user, the jumbotron is hidden on sign-in and the create
blog/page divs/buttons are displayed.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -7,3 +7,15 @@ body {
   background-image: url('https://smhttp-ssl-5891.nexcesscdn.net/media/catalog/product/cache/1/image/1800x/6b9ffbf72458f4fd2d3cb995d92e8889/b/o/bobloblawheather_fullpic.png');
   font-size: 20px;
 }
+
+.hidden{
+  display: none;
+}
+
+// .show-for-visitor {
+//   display: block;
+// }
+
+// .show-for-user {
+//   display: block;
+// }
