--- a/assets/scripts/templates/user-blogs.handlebars
+++ b/assets/scripts/templates/user-blogs.handlebars
@@ -12,7 +12,7 @@
           <button type="button" class="remove btn btn-default handle" data-toggle="modal" data-target="#removepostmodal{{post.id}}">Remove Blog</button>
         </li>
       </ul>
-      <div class="modal fade update-modal" id="updatepostmodal{{post.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+      <div class="modal fade update-post-modal" id="updatepostmodal{{post.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
