Updated get all blogs handlebars template
Now it uses the handlebars helper 'date' to correctly format date
and return that with the blog title and body

--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -8,6 +8,8 @@
           <div>
             <!-- <p>Title: {{post.title}}</p> -->
             <p>Body: {{post.body}}</p>
+            <p>Date: {{date post.createdAt}}</p>
+
           </div>
         </ul>
       </div>
