--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,11 +1,17 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 @import url(https://fonts.googleapis.com/css?family=Rock+Salt);
+@import url(https://fonts.googleapis.com/css?family=Satisfy);
 
 body {
-  // font-family: 'Rock Salt', cursive;
-  background-image: url('https://smhttp-ssl-5891.nexcesscdn.net/media/catalog/product/cache/1/image/1800x/6b9ffbf72458f4fd2d3cb995d92e8889/b/o/bobloblawheather_fullpic.png');
+  // font-family: 'Satisfy', cursive;
+  background-image: url('https://i.imgur.com/DZcQDA8.jpg');
+  background-size: 100%auto;
   font-size: 20px;
+}
+
+.jumbotron {
+  font-family: 'Satisfy', cursive;
 }
 
 .hidden{
