Welcome user styling changes
Adds a new class to style the welcome user div, changes the font,
and clears the create page to new line.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,7 +9,13 @@ body {
   background-size: 100%auto;
   font-size: 20px;
 }
-
+.welcomeUser {
+  font-family: 'Satisfy', cursive;
+  font-size: 45px;
+}
+.createPageDiv {
+  clear: both;
+}
 .jumbotron {
   font-family: 'Satisfy', cursive;
 }
