--- a/assets/scripts/templates/page-listing.handlebars
+++ b/assets/scripts/templates/page-listing.handlebars
@@ -1,6 +1,6 @@
 <ul>
   {{#each pages as |page|}}
-    <li data-id: "{{this.id}}" data-name="{{this.name}}" class='this{{this.id}} col-md-4 updatedWk list-unstyled text-center'>
+    <li data-id: "{{this.id}}" data-name="{{this.name}}" class='this{{this.id}} hbStyle col-md-12 updatedWk updatedWk list-unstyled text-center'>
       <h1>  <small>{{page.title}}</small></h1>
       <div>
         <ul data-id="{{page.id}}" class="page pageStats list-unstyled">
