HTML and Styling Updates
Added some html updates including new name, updated div sizes and
included welcome user email to the navbar with the tabs.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -14,12 +14,17 @@ body {
 .welcomeUser {
   font-family: 'Satisfy', cursive;
   font-size: 45px;
+  float: left;
+  text-align: left;
 }
 .createPageDiv {
   clear: both;
 }
 .jumbotron {
   font-family: 'Chewy', cursive;
+}
+.userTabs {
+  clear: both;
 }
 
 .hidden{
