--- a/assets/scripts/templates/user-pages.handlebars
+++ b/assets/scripts/templates/user-pages.handlebars
@@ -10,8 +10,9 @@
           <p>{{page.footer}}</p>
           <button type="button" class="update btn btn-primary handle" data-toggle="modal" data-target="#updatepagemodal{{page.id}}">Update Page</button>
           <button type="button" class="remove btn btn-default handle" data-toggle="modal" data-target="#removepagemodal{{page.id}}">Remove Page</button>
-      </div>
+        </div>
     </div>
+    <br>
 
       <div class="modal fade update-page-modal" id="updatepagemodal{{page.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -25,13 +26,12 @@
                 <input type='text' name='page[title]' id ='updateTitle' placeholder="Updated Title" value ="{{page.title}}" required>
                 <input type='text' name='page[body]' id ='updateBody' placeholder="Updated Body" value ="{{page.body}}" required>
                 <input type='text' name='page[footer]' id ='updateFooter' placeholder="Updated Footer" value ="{{page.footer}}" required>
-                <label for="create-body-confirmation">Background-Color</label>
-                <select name="page[background]">
-                  {{#dropdown page.background}}
-                  <option value="default-white">Default (White)</option>
-                  <option value="red">Red</option>
-                  <option value="blue">Blue</option>
-                  <option value="green">Green</option>
+                <label for="create-body-confirmation">Choose Template</label>
+                <select name="page[template]">
+                  {{#dropdown page.template}}
+                  <option value="defaultTemplate">Default</option>
+                  <option value="coolTemplate">Cool</option>
+                  <option value="fancyTemplate">Fancy</option>
                   {{/dropdown}}
                 </select>
                 <input data-id="{{page.id}}" type="submit" name="submit" value="Update Page">
