Reformats page update modal and handlebars templates
reformats the page update modal to include values that user has
already entered. also changes it to a text area. updated other
handle bar templates to remove word 'body' from displaying.
updates function for getting all user pages to use new handlebars
template

--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -7,8 +7,8 @@
           <!-- Blog Info -->
           <div>
             <!-- <p>Title: {{post.title}}</p> -->
-            <p>Body: {{post.body}}</p>
-            <p>Date: {{date post.createdAt}}</p>
+            <p>{{post.body}}</p>
+            <p>Last Updated: {{date post.updatedAt}}</p>
 
           </div>
         </ul>
