--- a/assets/scripts/templates/page-listing.handlebars
+++ b/assets/scripts/templates/page-listing.handlebars
@@ -7,7 +7,7 @@
           <!-- Blog Info -->
           <div>
             <!-- <p>Title: {{page.title}}</p> -->
-            <p>Body: {{page.body}}</p>
+            <p>{{page.body}}</p>
           </div>
         </ul>
       </div>
