Fixed responsive bug
Resolved issue that occured in smaller browsers that prohibited using
the user tabs by using clears on classes where necessary.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -17,7 +17,12 @@ body {
   float: left;
   text-align: left;
 }
+.blogClass {
+  clear:both;}
 .createPageDiv {
+  clear: both;
+}
+.userTabFunction {
   clear: both;
 }
 .jumbotron {
