Updated user page update modal template
Now fields are required

--- a/assets/scripts/templates/user-pages.handlebars
+++ b/assets/scripts/templates/user-pages.handlebars
@@ -25,7 +25,7 @@
               <fieldset>
                 <textarea id="create-page-title" class="pagefield" maxlength="100" rows="2" cols="40" name="page[title]" placeholder="Updated Title" value ="{{page.title}}" required>{{page.title}}</textarea>
                 <textarea id="create-page-body" class="pagefield" maxlength="500" rows="15" cols="40" name="page[body]" placeholder="Updated Body" value ="{{page.body}}" required>{{page.body}}</textarea>
-                <textarea id="create-page-footer" class="pagefield" maxlength="100" rows="2" cols="40" name="page[footer]" placeholder="Updated Footer" value ="{{page.footer}}">{{page.footer}}</textarea>
+                <textarea id="create-page-footer" class="pagefield" maxlength="100" rows="2" cols="40" name="page[footer]" placeholder="Updated Footer" value ="{{page.footer}}" required>{{page.footer}}</textarea>
                 <br>
                 <label for="create-body-confirmation">Choose Template</label>
                 <select name="page[template]">
