Updated alert for blogs
Changed font for all alerts to sans-serif.
Create/update success/fail alerts now flow correctly and the user can
see the feedback. Deletions now correctly informs the user of successful
deletion.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -16,6 +16,7 @@ body {
   font-size: 45px;
   float: left;
   text-align: left;
+  color: #fff;
 }
 .blogClass {
   clear:both;}
@@ -62,6 +63,10 @@ color: black;
   color: #F5FF55;
   background-color: #900C3F;
   font-size: 36px;
+}
+
+.alert {
+  font-family: sans-serif;
 }
 
 // .show-for-visitor {
