Added requirements text to text areas

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -69,6 +69,10 @@ color: black;
   font-family: sans-serif;
 }
 
+.textarea-notes {
+  font-family: serif;
+  font-size: 15px;
+}
 // .show-for-visitor {
 //   display: block;
 // }
