--- a/assets/scripts/templates/user-pages.handlebars
+++ b/assets/scripts/templates/user-pages.handlebars
@@ -34,7 +34,12 @@
                   <option value="coolTemplate">Cool</option>
                   <option value="fancyTemplate">Fancy</option>
                   {{/dropdown}}
+                  <br>
                 </select>
+                  <br>
+                  <p class="textarea-notes">*NOTE: Return key is disabled in text areas.</p>
+                  <p class="textarea-notes">Max Character Lengths: Title (100), Body (500), Footer (100).</p>
+                  <p class="textarea-notes">All fields are required.</p>
                 <input data-id="{{page.id}}" type="submit" name="submit" value="Update Page">
             </fieldset>
             </form>
