Fixed alert bugs and blank space entries
Fixed issue where user can enter in a series of blank space. Now users
are forced to enter something other than blank spaces into fields for
blogs and pages. Also fixed alerts for page updates and blog updates.
Also fixed issue where the return key was not working. Updated
placeholder text for pages handlebar update.

--- a/assets/scripts/templates/user-blogs.handlebars
+++ b/assets/scripts/templates/user-blogs.handlebars
@@ -30,9 +30,9 @@
             <div class="modal-body">
             <form class="update-post" data-id="{{post.id}}">
               <fieldset>
-                <textarea id="updateTitle" class="blogfield" rows="2" cols="40" maxlength="100" name='post[title]' placeholder='{{post.title}}' value ="{{post.title}}" required>{{post.title}}</textarea>
+                <textarea id="updateTitle" class="blogfield" rows="2" cols="40" maxlength="100" name='post[title]' placeholder='Update Title' value ="{{post.title}}" required>{{post.title}}</textarea>
                 <br>
-                <textarea id="updateBody" class="blogfield" rows="10" cols="40" maxlength="500" name='post[body]' placeholder='{{post.body}}' value ="{{post.body}}" required>{{post.body}}</textarea>
+                <textarea id="updateBody" class="blogfield" rows="10" cols="40" maxlength="500" name='post[body]' placeholder='Update Body' value ="{{post.body}}" required>{{post.body}}</textarea>
                 <br>
                 <p class="textarea-notes">*NOTE: Return key is disabled in text areas.</p>
                 <p class="textarea-notes">Max Character Lengths: Title (100), Body (500).</p>
