Committing create comment functionality

--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -12,6 +12,22 @@
 
           </div>
         </ul>
+        <!-- View Comments -->
+        <div id="commentBodyDiv" data-id="{{post.id}}">
+          {{#each post.comments as |comment|}}
+          {{#if comment.body}}
+          <p>Comment: {{comment.body}}</p>
+          {{/if}}
+          {{/each}}
+        </div>
+        <!-- Add comment  -->
+        <!-- if comment.posted by === store.user.id (pass user into handlebars)  -->
+        <form data-id="{{post.id}}" class="comment add-comment addComment signedInComment">
+          <fieldset>
+            <textarea id="submitComment" class="blogfield" rows="2" cols="40" maxlength="100" name='comment[body]' placeholder='Add Comment' required></textarea>
+            <input type="submit" name="submit" value="addComment">
+        </fieldset>
+        </form>
       </div>
       <hr>
     </li>
