--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -2,6 +2,7 @@
   {{#each posts as |post|}}
     <li data-id: "{{this.id}}" data-name="{{this.name}}" class='this{{this.id}} hbStyle col-md-12 updatedWk list-unstyled text-center'>
       <h1>  <small>{{post.title}}</small></h1>
+      <p>{{../email}}</p>
       <div>
         <ul data-id="{{post.id}}" class="post postStats list-unstyled">
           <!-- Blog Info -->
@@ -15,23 +16,31 @@
         <!-- View Comments -->
         <div id="commentBodyDiv" data-id="{{post.id}}">
           {{#each post.comments as |comment|}}
-          {{#if comment.body}}
-          <!-- View Each Comments -->
-          <p>{{comment.postedByEmail}} commented: {{comment.body}}
-          <!-- Delete Comments -->
-          <button type="button" class="removeComment btn btn-default handle" data-id="{{post.id}}" data-toggle='{{comment.id}}'>Delete Comment</button></p><br>
-          <!-- Update Comments -->
-          <div>
-          <button type="button" class="updateComment btn btn-default handle" >Update Comment</button></p>
-          <form data-id="{{post.id}}" data-toggle='{{comment.id}}' class="comment updateComment signedInComment">
-            <fieldset>
-              <textarea id="submitComment" rows="2" cols="40" maxlength="100" name='comment[body]' placeholder='Update Comment' required></textarea>
-              <input type="submit" name="submit" value="Save Update">
-          </fieldset>
-        </form>
-        </div>
-        <br>
-          {{/if}}
+            {{#if comment.body}}
+              <!-- View Each Comments -->
+              <p class='commentFont'>{{comment.postedByEmail}} commented: {{comment.body}}</p>
+              <!-- Not current_user Div to Hide -->
+              {{#if comment.editComment}}
+              <div class='notCurrentUser'>
+                <!-- <p>{{../../email}}</p> -->
+                <!-- Delete Comments -->
+                <button type="button" class="removeComment btn btn-default handle" data-id="{{post.id}}" data-toggle='{{comment.id}}'>Delete Comment</button>
+                <!-- Update Comments Button to show div -->
+                <button data-id="{{comment.id}}" type="button" class="updateCommentButton btn btn-default handle">Update Comment</button>
+                <!-- Update Comments Form -->
+
+                <div data-id="{{comment.id}}" data-toggle="{{post.id}}" id="updateForm{{comment.id}}" class='updateForm{{comment.id}}' style="display: none;">
+                  <form data-id="{{post.id}}" data-toggle='{{comment.id}}' class="comment updateComment signedInComment">
+                    <fieldset>
+                      <textarea id="submitComment" rows="2" cols="40" maxlength="100" name='comment[body]' placeholder='Update Comment' required></textarea>
+                      <input type="submit" name="submit" value="Save Update">
+                    </fieldset>
+                  </form>
+                </div>
+              </div>
+              {{/if}}
+              <br>
+            {{/if}}
           {{/each}}
         </div>
         <!-- Add comment  -->
@@ -40,7 +49,7 @@
           <fieldset>
             <textarea id="submitComment" class="blogfield" rows="2" cols="40" maxlength="100" name='comment[body]' placeholder='Add Comment' required></textarea>
             <input type="submit" name="submit" value="addComment">
-        </fieldset>
+          </fieldset>
         </form>
       </div>
       <hr>
