--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -30,7 +30,7 @@
                 <div data-id="{{comment.id}}" data-toggle="{{post.id}}" id="updateForm{{comment.id}}" class='updateForm{{comment.id}}' style="display: none;">
                   <form data-id="{{post.id}}" data-toggle='{{comment.id}}' class="comment updateComment signedInComment">
                     <fieldset>
-                      <textarea id="submitComment" rows="2" cols="40" maxlength="100" name='comment[body]' placeholder='Update Comment' required></textarea>
+                      <textarea id="submitComment" class="comment updateComment" rows="2" cols="40" maxlength="100" name='comment[body]' placeholder='Update Comment' required></textarea>
                       <input type="submit" name="submit" value="Save Update">
                       <button data-id="{{comment.id}}" type="button" class="updateCommentButtonHide btn btn-xs handle">Cancel</button>
                     </fieldset>
@@ -45,7 +45,7 @@
           <!-- if comment.posted by === store.user.id (pass user into handlebars)  -->
           <form data-id="{{post.id}}" class="comment add-comment addComment signedInComment">
             <fieldset>
-              <textarea id="submitComment" class="blogfield" rows="2" cols="40" maxlength="200" name='comment[body]' placeholder='Add Comment' required></textarea>
+              <textarea id="submitComment" class="blogfield addComment" rows="2" cols="40" maxlength="200" name='comment[body]' placeholder='Add Comment' required></textarea>
               <input type="submit" name="submit" value="addComment">
             </fieldset>
           </form>
